Major refactor - seems to be working again

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -15,7 +15,7 @@ longitude = -105.614
 TZOffsetMins = -360
 debugValue = TRUE
 
-portName = "/dev/hhb"
+portName = "/dev/ttyUSB0"
 sleepSecsBetweenEventLoops = 1			# delay one second between 's' state commands
 pollForEvents = TRUE
 
@@ -24,7 +24,7 @@ pollForEvents = TRUE
 
 [MQTT]
 logEventsToMQTT = TRUE
-HostName = "192.167.0.11"
+HostName = "192.168.0.11"
 PortNumber = 1883
 KeepAliveValue = 60
 
