--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -21,12 +21,19 @@ pollForEvents = TRUE
 
 
 [Devices]
+## List out MAC address and any information you want handled
+## Unfortunately, you won't know MAC addresses until the system runs
+## for a bit
+
 
 [MQTT]
 logEventsToMQTT = TRUE
 HostName = "192.168.0.11"
 PortNumber = 1883
 KeepAliveValue = 60
+StatusTopic = "HHB/STATUS"
+AlarmTopic = "HHB/ALARM"
+QoS = 0
 
 
 [Database]
@@ -35,4 +42,7 @@ HostName = "192.168.0.11"
 UserName = "pconroy"
 Password = "pass123"
 Schema = "Conroy"
+DropTables = FALSE
+CreateTables = FALSE
+
 
