water leak sensor and open close working

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -10,8 +10,8 @@ Address Line 2 = ""
 City = "Erie"
 StateOrProvinceCode = "CO"
 PostalCode = "80516"
-latitude = 40.0123
-longitude = -105.614
+latitude = 40.02081
+longitude = -105.0082
 TZOffsetMins = -360
 debugValue = TRUE
 
@@ -34,7 +34,7 @@ KeepAliveValue = 60
 StatusTopic = "HHB/STATUS"
 AlarmTopic = "HHB/ALARM"
 QoS = 0
-
+retainMsgs = FALSE
 
 [Database]
 logEventsToDatabase = FALSE
