Valgrind'd results. Small leak reported that doesn't grow and I cannot find the source of.

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -15,7 +15,8 @@ longitude = -105.0082
 TZOffsetMins = -360
 debugValue = TRUE
 
-portName = "/dev/ttyUSB0"
+#portName = "/dev/ttyUSB0"
+portName = "/dev/hhb"
 sleepSecsBetweenEventLoops = 1			# delay one second between 's' state commands
 pollForEvents = TRUE
 
@@ -24,10 +25,26 @@ pollForEvents = TRUE
 ## List out MAC address and any information you want handled
 ## Unfortunately, you won't know MAC addresses until the system runs
 ## for a bit
+Device1Mac = 0000011957
+Device1Type = WaterLeakSensor
+Device1Name = "Basement Floor"
+
+Device2Mac = 000D6F000007AAAF
+Device2Type = MotionSensor
+Device1Name = "Family Room"
+
+Device3Mac = 000D6F0000010228
+Device3Type = OpenCloseSensor
+Device3Name = "Front Door Room"
+
+Device3Mac = 000D6F0000011480
+Device3Type = HomeKey
+Device3Name = "Dad's Key"
+
 
 
 [MQTT]
-logEventsToMQTT = TRUE
+logEventsToMQTT = FALSE
 HostName = "192.168.0.11"
 PortNumber = 1883
 KeepAliveValue = 60
@@ -44,5 +61,10 @@ Password = "pass123"
 Schema = "Conroy"
 DropTables = FALSE
 CreateTables = FALSE
+
+[Debugging]
+debugValue = TRUE
+LogFile = "hhblog.log"
+Valgrind = TRUE
 
 
