As far as I can see everything is working!

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -15,8 +15,8 @@ longitude = -105.0082
 TZOffsetMins = -360
 debugValue = TRUE
 
-#portName = "/dev/ttyUSB0"
-portName = "/dev/hhb"
+portName = "/dev/ttyUSB0"
+#portName = "/dev/hhb"
 sleepSecsBetweenEventLoops = 1			# delay one second between 's' state commands
 pollForEvents = TRUE
 
@@ -39,12 +39,12 @@ Device3Name = "Front Door Room"
 
 Device3Mac = 000D6F0000011480
 Device3Type = HomeKey
-Device3Name = "Dad's Key"
+Device3Name = "Dads Key"
 
 
 
 [MQTT]
-logEventsToMQTT = FALSE
+logEventsToMQTT = TRUE
 HostName = "192.168.0.11"
 PortNumber = 1883
 KeepAliveValue = 60
@@ -55,12 +55,13 @@ retainMsgs = FALSE
 
 [Database]
 logEventsToDatabase = FALSE
-HostName = "192.168.0.11"
-UserName = "pconroy"
-Password = "pass123"
-Schema = "Conroy"
+HostName = 192.168.0.11
+#HostName = localhost
+UserName = "root"
+Password = "pat172"
+Schema = "HomeAutomation"
 DropTables = FALSE
-CreateTables = FALSE
+CreateTables = TRUE
 
 [Debugging]
 debugValue = TRUE
