--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -15,8 +15,7 @@ longitude = -105.0082
 TZOffsetMins = -360
 debugValue = TRUE
 
-portName = "/dev/ttyUSB0"
-#portName = "/dev/hhb"
+portName = "/dev/hhb"
 sleepSecsBetweenEventLoops = 1			# delay one second between 's' state commands
 pollForEvents = TRUE
 
@@ -35,7 +34,7 @@ Device1Name = "Family Room"
 
 Device3Mac = 000D6F0000010228
 Device3Type = OpenCloseSensor
-Device3Name = "Front Door Room"
+Device3Name = "Front Door"
 
 Device3Mac = 000D6F0000011480
 Device3Type = HomeKey
@@ -53,15 +52,23 @@ AlarmTopic = "HHB/ALARM"
 QoS = 0
 retainMsgs = FALSE
 
+
 [Database]
-logEventsToDatabase = FALSE
-HostName = 192.168.0.11
-#HostName = localhost
+logAlarms = TRUE
+logStatus = TRUE
+logHistory = FALSE
+##HostName = 192.168.0.11
+HostName = localhost
 UserName = "root"
 Password = "pat172"
 Schema = "HomeAutomation"
-DropTables = FALSE
-CreateTables = TRUE
+dropAlarmTable = FALSE
+createAlarmTable = TRUE
+dropStatusTable = FALSE
+createStatusTable = TRUE
+dropHistoryTable = FALSE
+createHistoryTable = TRUE
+maxMinutesOfHistoryStored = 180
 
 [Debugging]
 debugValue = TRUE
