--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -16,7 +16,7 @@ TZOffsetMins = -360
 debugValue = TRUE
 
 portName = "/dev/hhb"
-sleepSecsBetweenEventLoops = 1			# delay one second between 's' state commands
+sleepSecsBetweenEventLoops = 0			# delay one second between 's' state commands
 pollForEvents = TRUE
 
 
@@ -41,34 +41,47 @@ Device3Type = HomeKey
 Device3Name = "Dads Key"
 
 
-
+##################################################################################
+#
+#  Parameters that control how HHB sends information to an MQTT Broker. This
+#  section is read very frequently as HHB runs.  Changes you make to this section
+#  should take effect quickly
+#
+##################################################################################
 [MQTT]
-logEventsToMQTT = TRUE
-HostName = "192.168.0.11"
+logEventsToMQTT = TRUE			# Do you want information sent to an MQTT Broker?
+HostName = "192.168.0.11"		# The host that's running the MQTT Broker
 PortNumber = 1883
 KeepAliveValue = 60
-StatusTopic = "HHB/STATUS"
-AlarmTopic = "HHB/ALARM"
+StatusTopic = "HHB/STATUS"		# MQTT Topic for Status Messages
+AlarmTopic = "HHB/ALARM"		# MQTT Topic for Alarm Messages
 QoS = 0
 retainMsgs = FALSE
 
-
+###################################################################################
+#
+#  Parameters that control how HHB sends data to the database.  Note, unlike other
+#  sections in this INI file, this section is only read once at program start.
+#  If you change a value here, you need to stop and restart HHB.  This means it is
+#  safe to set a DropTable setting to TRUE, as it will only execute once.
+#
+###################################################################################
 [Database]
-logAlarms = TRUE
-logStatus = TRUE
-logHistory = FALSE
-##HostName = 192.168.0.11
-HostName = localhost
-UserName = "root"
-Password = "pat172"
+logAlarms = TRUE		# Do you want Alarm data written to the HHBAlarms table?
+logStatus = TRUE		# Do you want Current Status data in the HHBStatus table?
+logHistory = TRUE		# Do you want all status data written to the HHBHistory table?
+HostName = 192.168.0.11		# The host that's running MYSQL
+###HostName = localhost
+UserName = "homeauto"		# User Name to log into MySQL
+Password = "homeauto"
 Schema = "HomeAutomation"
-dropAlarmTable = FALSE
-createAlarmTable = TRUE
+dropAlarmTable = FALSE		# If true, drop HHBAlarm at startup
+createAlarmTable = TRUE		# If true, create the HHBAlarms table at startup
 dropStatusTable = FALSE
 createStatusTable = TRUE
 dropHistoryTable = FALSE
 createHistoryTable = TRUE
-maxMinutesOfHistoryStored = 180
+maxMinutesOfHistoryStored = 120	# Maximum number of minutes of data to keep in HHBHistory?
 
 [Debugging]
 debugValue = TRUE
