before mega changes to MQTT

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -84,8 +84,8 @@ createHistoryTable = TRUE
 maxMinutesOfHistoryStored = 120	# Maximum number of minutes of data to keep in HHBHistory?
 
 [Debugging]
-debugValue = TRUE
+debugValue = 3
 LogFile = "hhblog.log"
-Valgrind = TRUE
+Valgrind = FALSE
 
 
