Before Major Updates

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -16,7 +16,7 @@ TZOffsetMins = -360
 debugValue = TRUE
 
 portName = "/dev/hhb"
-sleepSecsBetweenEventLoops = 0			# delay one second between 's' state commands
+sleepSecsBetweenEventLoops = 1			# delay one second between 's' state commands
 pollForEvents = TRUE
 
 
@@ -56,7 +56,12 @@ KeepAliveValue = 60
 StatusTopic = "HHB/STATUS"		# MQTT Topic for Status Messages
 AlarmTopic = "HHB/ALARM"		# MQTT Topic for Alarm Messages
 QoS = 0
-retainMsgs = FALSE
+RetainMsgs = FALSE
+CleanSession = TRUE
+ClientID = "HHBSYSTEM1"
+EnableMQTTLoggingCallback = FALSE
+ExitOnTooManyErrors = TRUE
+MaxReconnectAttempts = 60
 
 ###################################################################################
 #
