--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -21,24 +21,7 @@ pollForEvents = TRUE
 
 
 [Devices]
-## List out MAC address and any information you want handled
-## Unfortunately, you won't know MAC addresses until the system runs
-## for a bit
-Device1Mac = 0000011957
-Device1Type = WaterLeakSensor
-Device1Name = "Basement Floor"
-
-Device2Mac = 000D6F000007AAAF
-Device2Type = MotionSensor
-Device1Name = "Family Room"
-
-Device3Mac = 000D6F0000010228
-Device3Type = OpenCloseSensor
-Device3Name = "Front Door"
-
-Device3Mac = 000D6F0000011480
-Device3Type = HomeKey
-Device3Name = "Dads Key"
+deviceInfoFile = "HHBDeviceInfo.txt"
 
 
 ##################################################################################
