Changed the code to create JSON packets

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -33,7 +33,7 @@ deviceInfoFile = "HHBDeviceInfo.txt"
 ##################################################################################
 [MQTT]
 logEventsToMQTT = TRUE			# Do you want information sent to an MQTT Broker?
-HostName = "192.168.1.11"		# The host that's running the MQTT Broker
+HostName = "aws"                        # The host that's running the MQTT Broker
 PortNumber = 1883
 KeepAliveValue = 60
 StatusTopic = "HHB/STATUS"		# MQTT Topic for Status Messages
@@ -45,6 +45,7 @@ ClientID = "HHBSYSTEM1"
 EnableMQTTLoggingCallback = FALSE
 ExitOnTooManyErrors = TRUE
 MaxReconnectAttempts = 60
+UseJSON = TRUE                          # Format MQTT packets as JSON
 
 ###################################################################################
 #
