Crap - no leading zeros in JSON numbers

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -33,7 +33,7 @@ deviceInfoFile = "HHBDeviceInfo.txt"
 ##################################################################################
 [MQTT]
 logEventsToMQTT = TRUE			# Do you want information sent to an MQTT Broker?
-HostName = "aws"                        # The host that's running the MQTT Broker
+HostName = "ec2-52-32-56-28.us-west-2.compute.amazonaws.com"                        # The host that's running the MQTT Broker
 PortNumber = 1883
 KeepAliveValue = 60
 StatusTopic = "HHB/STATUS"		# MQTT Topic for Status Messages
