topic out of MQTT payload

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -59,7 +59,7 @@ UseJSON = TRUE                          # Format MQTT packets as JSON
 logAlarms = TRUE		# Do you want Alarm data written to the HHBAlarms table?
 logStatus = TRUE		# Do you want Current Status data in the HHBStatus table?
 logHistory = TRUE		# Do you want all status data written to the HHBHistory table?
-HostName = 192.168.1.11		# The host that's running MYSQL
+HostName = "ec2-52-32-56-28.us-west-2.compute.amazonaws.com"                        # The host that's running the MQTT Broker
 ###HostName = localhost
 UserName = "homeauto"		# User Name to log into MySQL
 Password = "homeauto"
@@ -74,7 +74,7 @@ maxMinutesOfHistoryStored = 120	# Maximum number of minutes of data to keep in H
 
 [Debugging]
 debugValue = 3
-LogFile = "hhblog.log"
+LogFile = "/tmp/hhblog.log"
 Valgrind = FALSE
 
 
