changed name of device info file changed executable path in runscript

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -21,7 +21,7 @@ pollForEvents = TRUE
 
 
 [Devices]
-deviceInfoFile = "HHBDeviceInfo.txt"
+deviceInfoFile = "DeviceInfo.txt"
 
 
 ##################################################################################
