cleanup before push to GitHub repo

--- a/homeheartbeat.ini
+++ b/homeheartbeat.ini
@@ -5,13 +5,13 @@
 [System]
 ID = 614
 Name = "Patrick's HHB"
-Address Line 1 = "2711 Odell Dr"
+Address Line 1 = "123 Main Street"
 Address Line 2 = ""
-City = "Erie"
+City = "Denver"
 StateOrProvinceCode = "CO"
 PostalCode = "80516"
-latitude = 40.02081
-longitude = -105.0082
+latitude = 40.0001
+longitude = -104.001
 TZOffsetMins = -360
 debugValue = TRUE
 
@@ -33,7 +33,7 @@ deviceInfoFile = "DeviceInfo.txt"
 ##################################################################################
 [MQTT]
 logEventsToMQTT = TRUE			# Do you want information sent to an MQTT Broker?
-HostName = "ec2-52-32-56-28.us-west-2.compute.amazonaws.com"                        # The host that's running the MQTT Broker
+HostName = "mqtt.local"                 # The host that's running the MQTT Broker
 PortNumber = 1883
 KeepAliveValue = 60
 StatusTopic = "HHB/STATUS"		# MQTT Topic for Status Messages
@@ -59,10 +59,10 @@ UseJSON = TRUE                          # Format MQTT packets as JSON
 logAlarms = TRUE		# Do you want Alarm data written to the HHBAlarms table?
 logStatus = TRUE		# Do you want Current Status data in the HHBStatus table?
 logHistory = TRUE		# Do you want all status data written to the HHBHistory table?
-HostName = "ec2-52-32-56-28.us-west-2.compute.amazonaws.com"                        # The host that's running the MQTT Broker
+HostName = "mysqlserver.local"  # The host that's running the MQTT Broker
 ###HostName = localhost
-UserName = "homeauto"		# User Name to log into MySQL
-Password = "homeauto"
+UserName = "username"		# User Name to log into MySQL
+Password = "password"
 Schema = "HomeAutomation"
 dropAlarmTable = FALSE		# If true, drop HHBAlarm at startup
 createAlarmTable = TRUE		# If true, create the HHBAlarms table at startup
